final_practice/iptables-backup
# Generated by iptables-save v1.4.12 on Wed May 15 18:40:28 2013
*nat
:PREROUTING ACCEPT [231:45668]
:INPUT ACCEPT [187:36560]
:OUTPUT ACCEPT [2141:132146]
:POSTROUTING ACCEPT [2165:133620]
-A PREROUTING -d 192.168.1.39/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.122.80:443
-A PREROUTING -d 192.168.1.39/32 -p tcp -m tcp --dport 22002 -j DNAT --to-destination 192.168.122.81:22
-A PREROUTING -d 192.168.1.39/32 -p tcp -m tcp --dport 22001 -j DNAT --to-destination 192.168.122.80:22
-A PREROUTING -d 192.168.1.39/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.122.80:80
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Wed May 15 18:40:28 2013
# Generated by iptables-save v1.4.12 on Wed May 15 18:40:28 2013
*mangle
:PREROUTING ACCEPT [324645:274042180]
:INPUT ACCEPT [322494:273368865]
:FORWARD ACCEPT [1648:557497]
:OUTPUT ACCEPT [256550:71629532]
:POSTROUTING ACCEPT [258590:72212319]
-A POSTROUTING -o virbr10 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Wed May 15 18:40:28 2013
# Generated by iptables-save v1.4.12 on Wed May 15 18:40:28 2013
*filter
:INPUT ACCEPT [10644:4749100]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [9731:1503777]
-A INPUT -i virbr10 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr10 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr10 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr10 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr10 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr10 -j ACCEPT
-A FORWARD -i virbr10 -o virbr10 -j ACCEPT
-A FORWARD -o virbr10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i wlan0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed May 15 18:40:28 2013
